--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/i18n": "^8.5.1",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.13.0",
+    "pinia": "^2.2.2",
     "sass": "^1.77.8",
     "sass-loader": "^16.0.1",
     "vue": "latest"
